--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
@@ -45,7 +46,7 @@
     "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
-    "initVersion": "7.24.1"
+    "initVersion": "7.24.2"
   },
   "packageManager": "npm@10.1.0"
 }
