Large songlists are virtualised

--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.11.0",
+    "@tanstack/react-virtual": "^3.0.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@types/react-window": "^1.8.8",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-window": "^1.8.10",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "use-debounce": "^10.0.0",
