--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@types/react-window": "^1.8.8",
+    "jotai": "^2.6.2",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
