--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "sing",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "db:load": "./scripts/load-db.sh",
+    "match": "node ./scripts/match-ktvs.js",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "@types/react-window": "^1.8.8",
+    "csv-parser": "^3.0.0",
     "jotai": "^2.6.2",
     "next": "^14.0.3",
     "react": "18.2.0",
